# stability-oracle

./: README.md  _config.yml  pyproject.toml  setup.py
haos-stability-skill/: README.md  pyproject.toml
haos-stability-skill/docs/: 01_STABILITY_ORACLE_DOCUMENTATION_PAPER.tex  02_ORACLE_ENGINE_V2_AND_ROUTING_PAPER.tex  03_TELEMETRY_LAYER_AND_PARITY_PAPER.tex  04_LLM_REASONING_TELEMETRY_DEMO_PAPER.tex  05_AGENT_TRAJECTORY_STABILITY_DEMO_PAPER.tex  06_STABILITY_ORACLE_MAIN_PAPER.tex  ARCHITECTURE_V2.md  DEMO_DOMAIN_LLM_REASONING.md  INTERNAL_TWO_WEEK_ROADMAP.md  METRIC_PLUGIN_CONTRACT.md  WHAT_IS_STABILITY_ORACLE.md
haos-stability-skill/examples/: __init__.py  agent_hermes_example.py  agent_loop_demo.py  agent_openclaw_example.py  router_demo.py  simple_scan_demo.py
haos-stability-skill/haos_skill/: __init__.py  adapter.py  cache.py  cli.py  safety.py  schema.json  skill.py  state_spec.py
haos-stability-skill/haos_skill/foundational/: __init__.py  contract.py
haos-stability-skill/haos_skill/metrics/: __init__.py  base.py  causal_deformation.py  geometric_integrity.py  structural_retention.py  temporal_consistency.py
haos-stability-skill/haos_skill/oracle/: __init__.py  classifier.py  engine.py  exceptions.py  reports.py
haos-stability-skill/haos_skill/perturbations/: __init__.py  (+2 more)
haos-stability-skill/tests/: test_agent_loop_demo.py  test_classifier.py  test_cli.py  test_determinism.py  test_foundational_contract.py  test_metrics_interface.py  test_oracle_engine.py  test_routing.py  test_skill_basic.py  test_state_spec.py  test_telemetry.py  test_timeout.py
(+51 files in other folders)
