[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haos-stability-skill"
version = "0.1.0"
description = "Standalone agent-callable skill for HAOS-IIP structural stability evaluation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
haos-skill = "haos_skill.cli:main"

[tool.setuptools.packages.find]
include = ["haos_skill", "haos_skill.*"]

[tool.setuptools.package-data]
haos_skill = ["schema.json"]
